📱 disabled scroll snap on mobile, fixed layout and font sizes for sections for responsive design

--- a/src/app.css
+++ b/src/app.css
@@ -5,3 +5,7 @@
 .sdgred{
     color: #ff1035;
 }
+
+.graytext{
+    color: #a2a2a2
+}
